Fixed post wrapping around OPs.

--- a/resources/assets/sass/global/post.scss
+++ b/resources/assets/sass/global/post.scss
@@ -115,12 +115,9 @@
     .post-interior {
         position: relative;
     }
-        .post-content-wrapper {
-            overflow: hidden;
+        .post-content-wrapper .post {
+            padding-top: 0;
         }
-            .post-content-wrapper .post {
-                padding-top: 0;
-            }
 
     .post-content {
         padding: 0;
