--- a/resources/assets/sass/public/index-thread.scss
+++ b/resources/assets/sass/public/index-thread.scss
@@ -138,9 +138,13 @@ main.index-threaded {
                 }
 
         main.index-threaded .post-container.op-container {
-            display: inline-block;
+            display: block;
             background: none;
             border-style: solid none none none;
             /* border-top: 2px solid rgba(0,0,255,0.25); */
             border-style: none none none none;
+
+            .post-content {
+                overflow: visible; // allows post-wrapping right of the attachment
+            }
         }
